Добавил цели персонажам

--- a/13_may/HTML страница и CSS файлы_files/HTML страница и CSS файлы_files/style.css
+++ b/13_may/HTML страница и CSS файлы_files/HTML страница и CSS файлы_files/style.css
@@ -19,11 +19,11 @@
 /* дополнительный цвет !!! */
   --secondary: #f1f7f9;
 /* долполнительный цвет. светлый вариант !!! */
-  --secondary-light: #9ad28b;
+  --secondary-light: #f0a83a;
   
 /*   Акцидентный цвет и цвет шрифта на его фоне */
-  --accent: #9ad28b ;
-  --accent-text: #231f20;
+  --accent: #ffc800 ;
+  --accent-text: #ffffff;
   
   --accent2:#231f20 ;  /* используется только для подсветки кнопки акцидентного цвета при наведении */
   --accent2-text: #f1f7f9;
